@@ -154,7 +154,7 @@ module Cucumber
       #
       # gets converted into the following:
       #
-      #   [['a', 'b], ['c', 'd']]
+      #   [['a', 'b'], ['c', 'd']]
       #
       def raw
         cell_matrix.map do |row|
@@ -162,6 +162,10 @@ module Cucumber
             cell.value
           end
         end
+      end
+
+      def column_names	#:nodoc:
+        @col_names ||= cell_matrix[0].map { |cell| cell.value }
       end
 
       # Same as #raw, but skips the first (header) row
@@ -380,7 +384,7 @@ module Cucumber
         hash = Hash.new do |hash, key|
           hash[key.to_s] if key.is_a?(Symbol)
         end
-        raw[0].each_with_index do |column_name, column_index|
+        column_names.each_with_index do |column_name, column_index|
           value = @conversion_procs[column_name].call(cells.value(column_index))
           hash[column_name] = value
         end
