@@ -4,18 +4,32 @@ module Cucumber
     class Results
       def initialize(configuration)
         @configuration = configuration
+
+        # Optimization - quicker lookup.
+        @inserted_steps = {}
+        @inserted_scenarios = {}
       end
-      
+
       def configure(new_configuration)
         @configuration = Configuration.parse(new_configuration)
       end
-      
+
       def step_visited(step) #:nodoc:
-        steps << step unless steps.index(step)
+        step_id = step.object_id
+
+        unless @inserted_steps.has_key?(step_id)
+          @inserted_steps[step_id] = step
+          steps.push(step)
+        end
       end
       
       def scenario_visited(scenario) #:nodoc:
-        scenarios << scenario unless scenarios.index(scenario)
+        scenario_id = scenario.object_id
+
+        unless @inserted_scenarios.has_key?(scenario_id)
+          @inserted_scenarios[scenario_id] = scenario
+          scenarios.push(scenario)
+        end
       end
       
       def steps(status = nil) #:nodoc:
